1_processos_e_treads/processos/error.txt
In file included from src/menu.hpp:4,
                 from src/main.cpp:1:
src/read.hpp:109:21: error: ‘String’ has not been declared
  109 |     void consumidor(String a);
      |                     ^~~~~~
src/read.hpp:546:15: error: variable or field ‘produtor’ declared void
  546 | void produtor(String a);
      |               ^~~~~~
src/read.hpp:546:15: error: ‘String’ was not declared in this scope
src/read.hpp: In function ‘void printCombinacoes()’:
src/read.hpp:562:13: error: ‘produtor’ was not declared in this scope
  562 |             produtor(i);
      |             ^~~~~~~~
src/read.hpp: At global scope:
src/read.hpp:1062:15: error: variable or field ‘produtor’ declared void
 1062 | void produtor(String a){
      |               ^~~~~~
src/read.hpp:1062:15: error: ‘String’ was not declared in this scope
make: [makefile:17: build/objects/src/main.o] Error 1 (ignored)
g++: error: ./build/objects/src/main.o: No such file or directory
make: [makefile:21: build//app] Error 1 (ignored)
